--- a/implementation/CMakeLists.txt
+++ b/implementation/CMakeLists.txt
@@ -1,20 +1,37 @@
-cmake_minimum_required(VERSION 3.16)
+# Set the minimum version of CMake required
+cmake_minimum_required(VERSION 3.10)
 
 # Project name
-project(DSII_Project)
+project(SpaceEfficientDocumentFingerprinting)
 
-# Set C++ standard
+# Set the C++ standard to C++17 (as C++14 doesn't support std::filesystem)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-# Add source files
-file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 # Include directories
 include_directories(include)
 
-# Add executable
-add_executable(DSII_Project ${SOURCES})
+# Set the source files for the project
+set(SOURCES
+    src/main.cpp
+    src/countingbloomfilter.cpp
+    src/fingerprint.cpp
+    src/indexing.cpp
+    src/minhash.cpp
+)
 
-# Link libraries (if any)
-# target_link_libraries(DSII_Project <library_name>)
+# Add executable
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+# Link the filesystem library (for GCC 8 and above)
+target_link_libraries(${PROJECT_NAME} stdc++fs)
+
+# Optionally, add any specific compiler flags you need
+# For example, if you're using GCC or Clang, you might want:
+# target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
+
+# Include Boost for hashing and random number generation (if needed)
+# find_package(Boost REQUIRED)
+
+# Link additional libraries if necessary (e.g., Boost, STL)
+# target_link_libraries(${PROJECT_NAME} Boost::Boost)
